# ssl-e-seq

./: README.md
demo-dataloader/nbs/: lit_train.ipynb  load_names_data.ipynb  load_text2tb.ipynb  loader_primitivs.ipynb  setup.ipynb  train.ipynb  train_primitivs.ipynb
demo-dataloader/seq-loader/: pyproject.toml
demo-dataloader/seq-loader/src/seq_loader/: lightning.py  names_loader.py  nn.py
demo-dataloader/seq-loader/tests/: test_names_loader.py
