[project]
name = "seq-loader"
version = "0.1.0"
description = ""
authors = [
    {name = "motuzov",email = "motuzov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "seq_loader", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
